experimental/ast/testdata/parser/syntax/eof_after_kw.proto.stderr
error: unexpected end-of-file in syntax declaration
  --> testdata/parser/syntax/eof_after_kw.proto:15:7
   | 
15 | syntax
   |       ^ expected `=`

warning: missing package declaration
 --> testdata/parser/syntax/eof_after_kw.proto
   = note: omitting the `package` keyword implies an empty package
   = help: using the empty package is discouraged
   = help: explicitly add `package ...;` at the top of the file, after the syntax declaration

encountered 1 error and 1 warning
